gitops/minio/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio-ml-workshop
  namespace: minio-system
  labels:
    app.kubernetes.io/name: minio
    app.kubernetes.io/instance: min
    app.kubernetes.io/version: "0.0.1"
spec:
  ports:
    - port: 9000
      protocol: TCP
      name: api
    - port: 33933
      protocol: TCP
      name: web
 
  selector:
    app.kubernetes.io/name: minio
    app.kubernetes.io/instance: min
  type: ClusterIP
  sessionAffinity: None
